--- a/assets/css/transition.scss
+++ b/assets/css/transition.scss
@@ -1,10 +1,10 @@
 .page-enter-active,
 .page-leave-active {
-    transition: opacity 0.4s ease;
+  transition: all 0.2s;
 }
 .page-enter-from,
 .page-leave-to {
-    opacity: 0;
+  opacity: 0;
 }
 
 .fade-enter-active,
