--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -54,7 +54,7 @@
 
 #main-app {
   button, a {
-    &:focus-within { 
+    &:focus-visible { 
       outline: none;
       @apply ring-slate-200 ring-2
     } 
@@ -77,6 +77,20 @@
   &:focus-within {
     outline: none;
     @apply ring-0
+  }
+}
+
+.lazyLoad {
+  opacity: 0;
+  transition-duration: 0.35s;
+  transition-property: opacity;
+  &::after {
+    content: 'some text';
+    display: block;
+  }
+  &.isLoaded{
+    opacity: 1;
+    transition-property: inherit;
   }
 }
 
@@ -141,6 +155,13 @@ img.lazyload {
   outline: none;
   border: 0 solid;
   text-decoration: none;
+  ::-moz-selection { /* Code for Firefox */
+    @apply text-white bg-blue-500;
+  }
+  
+  ::selection {
+    @apply text-white bg-blue-500;
+  }
 }
 
 html,
