--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -94,19 +94,15 @@
   }
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
   overflow-y: scroll; 
 }
 
-body::-webkit-scrollbar {
-  display: none; /* for Chrome, Safari, and Opera */
-}
+// body::-webkit-scrollbar {
+//   display: none; /* for Chrome, Safari, and Opera */
+// }
 
 .hidden-scrollbar {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
