--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -100,9 +100,9 @@ body {
   overflow-y: scroll; 
 }
 
-// body::-webkit-scrollbar {
-//   display: none; /* for Chrome, Safari, and Opera */
-// }
+::-webkit-scrollbar {
+  display: none;
+}
 
 .hidden-scrollbar {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
