--- a/assets/css/transition.scss
+++ b/assets/css/transition.scss
@@ -63,7 +63,7 @@
 /* ensure leaving items are taken out of layout flow so that moving
    animations can be calculated correctly. */
 .list-leave-active {
-    position: absolute;
+    position: fixed;
 }
 
 
@@ -175,4 +175,59 @@
    animations can be calculated correctly. */
 .chatlist-leave-active {
     position: absolute;
+}
+
+/// list transition
+.section-nav-move ,/* apply transition to moving elements */
+.section-nav-enter-active,
+.section-nav-leave-active {
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+
+.section-nav-enter-active,
+.section-nav-leave-active {
+    z-index: 0;
+}
+
+.section-nav-enter-from {
+    opacity: 0;
+    transform: translateX(35%);
+}
+
+.section-nav-leave-to {
+    opacity: 0;
+    // transition-timing-function: cubic-bezier(0.14, -0.11, 0.94, -0.555);
+    transform: translateX(35%);
+}
+
+/* ensure leaving items are taken out of layout flow so that moving
+   animations can be calculated correctly. */
+.section-nav-leave-active {
+    position: fixed;
+}
+
+.dialog-enter-active,
+.dialog-leave-active {
+    transition: 0.5s;
+   .dialog-bg {
+        transition: all 0.3s ease;
+   }
+
+   .dialog {
+        transition: all 0.5s var(--transition-bounce);
+    }
+}
+.dialog-enter-from,
+.dialog-leave-to {
+    .dialog-bg {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    .dialog {
+        opacity: 0;
+        transform: translateY(-40px);
+    }
 }
